# bourse

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
crates/bourse-bench/: Cargo.toml
crates/bourse-bench/src/: lib.rs
crates/bourse-client/: Cargo.toml
crates/bourse-client/src/: main.rs
crates/bourse-core/: Cargo.toml
crates/bourse-core/benches/: engine.rs  matcher.rs  order_book.rs  spsc.rs  wal_commit.rs
crates/bourse-core/examples/: basic_match.rs
crates/bourse-core/src/: engine.rs  hub.rs  lib.rs  matcher.rs  order_book.rs  snapshot.rs  spsc.rs  types.rs  wal.rs
crates/bourse-core/src/types/: order_id.rs  price.rs  sequence.rs  side.rs
crates/bourse-core/tests/: no_alloc.rs  replay.rs  snapshot_recovery.rs
crates/bourse-protocol/: Cargo.toml
crates/bourse-protocol/src/: lib.rs
crates/bourse-replay/: Cargo.toml
crates/bourse-replay/src/: main.rs
crates/bourse-server/: Cargo.toml
crates/bourse-server/src/: lib.rs  main.rs
crates/bourse-server/tests/: loopback.rs  multi_tenant.rs
crates/matchx-bench/: Cargo.toml
crates/matchx-bench/src/: lib.rs
crates/matchx-client/: Cargo.toml
crates/matchx-client/src/: main.rs
crates/matchx-core/: Cargo.toml
crates/matchx-core/benches/: engine.rs  matcher.rs  order_book.rs  spsc.rs  wal_commit.rs
crates/matchx-core/examples/: basic_match.rs
crates/matchx-core/proptest-regressions/: matcher.txt
crates/matchx-core/src/: engine.rs  error.rs  hub.rs  lib.rs  matcher.rs  order_book.rs  snapshot.rs  types.rs  wal.rs
crates/matchx-core/src/types/: order_id.rs  price.rs  qty.rs  sequence.rs  side.rs  timestamp.rs
crates/matchx-core/tests/: no_alloc.rs  replay.rs  snapshot_recovery.rs
crates/matchx-protocol/: Cargo.toml
crates/matchx-protocol/src/: lib.rs
crates/matchx-replay/: Cargo.toml
crates/matchx-replay/src/: main.rs
crates/matchx-server/: Cargo.toml
crates/matchx-server/src/: lib.rs  main.rs
crates/matchx-server/tests/: loopback.rs  multi_tenant.rs
docs/: _config.yml  architecture.md  correctness-guarantees.md  demo-output.txt  dependencies.md  index.md  log.md  order-types.md  v2-ideas.md  wire-protocol.md
docs/_includes/: head_custom.html
docs/posts/: lock-free-spsc.md  numbers-and-methodology.md  wal-and-byte-exact-replay.md
