[workspace]
resolver = "3"
members = [
    "crates/matchx-core",
    "crates/matchx-protocol",
    "crates/matchx-server",
    "crates/matchx-client",
    "crates/matchx-replay",
    "crates/matchx-bench",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "MIT"
rust-version = "1.95"
authors = ["matchx authors"]
repository = "https://github.com/pauti04/matchx"
description = "matchx — a high-performance Rust limit order book matching engine."

[workspace.dependencies]
# Justification for every dependency: see docs/dependencies.md.
thiserror = "2"
proptest  = "1"

# Lints applied to every member crate via [lints] workspace = true.
# These encode the non-negotiables from the project charter; do not relax
# without explicit user override.
[workspace.lints.rust]
# Public API discipline: every public item must be documented.
missing_docs = "deny"
# Unsafe is allowed only when measurably required, with a // SAFETY: proof,
# and is gated behind an explicit `#[allow(unsafe_code)]` per-module.
unsafe_code = "deny"
# Edition 2024 default; restated for clarity.
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
# Forbidden constructs in lib code (charter "Non-negotiables").
unwrap_used    = "deny"
expect_used    = "deny"
panic          = "deny"
print_stdout   = "deny"
print_stderr   = "deny"
dbg_macro      = "deny"
todo           = "deny"
unimplemented  = "deny"
unreachable    = "deny"
mem_forget     = "deny"
# Style guards that catch easy footguns in performance-sensitive code.
inefficient_to_string = "warn"
needless_pass_by_value = "warn"

[profile.release]
codegen-units = 1
lto           = "fat"
panic         = "abort"
opt-level     = 3
debug         = "line-tables-only"

[profile.bench]
codegen-units = 1
lto           = "fat"
opt-level     = 3
debug         = "line-tables-only"
