[package]
name = "bourse-replay"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true
repository.workspace   = true
description = "bourse replay tool: rebuild book state from a snapshot + WAL tail."

[[bin]]
name = "bourse-replay"
path = "src/main.rs"

[dependencies]
bourse-core                  = { path = "../bourse-core" }
tracing.workspace            = true
tracing-subscriber.workspace = true

[lints]
workspace = true
