[package]
name        = "matchx-bench"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true
authors.workspace      = true
repository.workspace   = true
description = "matchx — criterion benchmark harness."

[dependencies]

[lints]
workspace = true
