[package]
name = "matchx-core"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true
repository.workspace   = true
description = "matchx matching engine library."

[dev-dependencies]
proptest.workspace  = true
criterion.workspace = true

[[bench]]
name    = "order_book"
harness = false

[lints]
workspace = true
