[package]
name = "matchx-core"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true
repository.workspace   = true
description = "matchx matching engine library."

[dependencies]
crc32c.workspace = true

[dev-dependencies]
proptest.workspace  = true
criterion.workspace = true

[[bench]]
name    = "order_book"
harness = false

[[bench]]
name    = "matcher"
harness = false

[[bench]]
name    = "spsc"
harness = false

[lints]
workspace = true
