[package]
name        = "matchx-protocol"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true
authors.workspace      = true
repository.workspace   = true
description = "matchx — FIX-inspired binary wire protocol codec (no I/O)."

[dependencies]

[lints]
workspace = true
