[package]
name = "matchx-protocol"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true
repository.workspace   = true
description = "matchx wire protocol — binary codec, no I/O."

[dependencies]
matchx-core = { path = "../matchx-core" }

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
