[package]
name        = "matchx-replay"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true
authors.workspace      = true
repository.workspace   = true
description = "matchx — replay tool: rebuild the book from snapshot + WAL."

[[bin]]
name = "matchx-replay"
path = "src/main.rs"

[dependencies]

[lints]
workspace = true
