[package]
name = "matchx-server"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true
repository.workspace   = true
description = "matchx server."

[lib]
name = "matchx_server"
path = "src/lib.rs"

[[bin]]
name = "matchx-server"
path = "src/main.rs"

[dependencies]
matchx-core     = { path = "../matchx-core" }
matchx-protocol = { path = "../matchx-protocol" }
tokio.workspace = true

[dev-dependencies]

[lints]
workspace = true
